fix(ui): added custom scrollbar to chatbar (#1307)

--- a/components/views/chat/chatbar/Chatbar.less
+++ b/components/views/chat/chatbar/Chatbar.less
@@ -106,7 +106,6 @@
 
     .editable-container {
       min-height: 48px;
-      overflow-y: scroll;
       max-height: 50vh;
     }
 
